--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <body>
-  <p>Diya Shetty. 1BM20IS033<p>
+  <p>Devops exam is on 31st Jan! My name is Kirti Chetwani<p>
 </body>
 </html>
